--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="headlines">
-            <textarea id="headline" class="transparent-input" rows="1">L'Aventure dont votre enfant est le héros !</textarea>
-            <textarea id="subheadline" class="transparent-input" rows="1">Créez une histoire interactive et personnalisée en moins d'1 minute.</textarea>
+            <textarea id="headline" class="transparent-input" rows="1">L'Aventure dont votre enfant est le héros !</div>
+            <textarea id="subheadline" class="transparent-input" rows="1">Créez une histoire interactive et personnalisée en moins d'1 minute.</div>
         </div>
         <div class="instruction-text">
             Dites nous en quelques lignes quelques informations sur votre enfant pour générer une histoire à sa pointure
